# tg17hack

./: LICENSE  README.md  tips_tricks.md
crypto/alice_and_bob/: README.md  writeup.md
crypto/badcrypt/: README.md  writeup.md
crypto/basic/: README.md  writeup.md
crypto/close_encounter/: README.md  writeup.md
crypto/rot/: README.md
crypto/transmission_control/: README.md  transmission.txt  writeup.md
crypto/you_spin_me_round/: writeup.md
misc/beep_beep/: README.md  writeup.md
misc/insanity/: README.md  solv.py  writeup.md
misc/unReCOgnizable/: README.md  writeup.md
misc/welcome/: README_welcome1.md  README_welcome2.md  README_welcome3.md  README_welcome4.md  README_welcome5.md  writeup.md
misc/zombies/: README.md  writeup.md
noob/terminal/: README.md  writeup.md
pwn/bookshelf/: README.md  shelf  writeup.md
pwn/leakme/: README.md  leakme  writeup.md
pwn/overflowme/: Makefile  README.md  overflowme  overflowme.c  writeup-hptk.md  writeup.md
pwn/time/: README.md  flag.txt  time  writeup.md
reversing/BIOS/: BIOS  Makefile  README.md  file.c  writeup.md
reversing/auto/: README.md  build.sh  solve_dec.py  writeup.md
reversing/noread/: README.md  noread  writeup.md
reversing/server/: README.md  server  writeup.md
stego/house_trouble/: README.md  writeup.md
stego/rare_pepe/: CMakeLists.txt  README.md  decode.cpp  encode.cpp  writeup.md
stego/rare_pepe/cmake/: Findpng++.cmake
web/cookie/: README.md  WRITEUP.md
web/friends/: README.md  flag.cfg  flag.txt  run.sh  server.py  writeup.md
web/hotdamn/: README.md  WRITEUP.md
(+98 files in other folders)
